@@ -7,7 +7,9 @@ EXTRA_DIST =			\
 	pycheckrc		\
 	intltool-extract.in	\
 	intltool-merge.in	\
-	intltool-update.in
+	intltool-update.in	\
+	sabayon.spec.in		\
+	sabayon.spec
 
 DISTCLEANFILES =		\
 	intltool-extract	\
@@ -17,3 +19,11 @@ DISTCLEANFILES =		\
 pycheck:
 	(cd lib; make pycheck) 
 	(cd admin-tool; make pycheck) 
+
+sabayon.spec: sabayon.spec.in Makefile
+	sed						\
+                -e s!\@VERSION\@!$(PACKAGE_VERSION)!	\
+                < $< > $@
+	
+rpm: sabayon.spec dist
+	@(rpmbuild -ba sabayon.spec)
