@@ -206,13 +206,14 @@ class ProfilesDialog:
         profile_name = self.__get_selected_profile ()
         if profile_name:
             # FIXME: shouldn't be hardcoded user name
-            username = "protouser"
+	    # NOTE: created when installing the RPM package.
+            username = "sabayon"
             profile_path = _get_profile_path_for_name (profile_name)
 
             user_path = self.__copy_to_user (profile_path, username)
 
             self.dialog.set_sensitive (False)
-            argv = [ SESSION_TOOL_PATH, "protouser", user_path ]
+            argv = [ SESSION_TOOL_PATH, "sabayon", user_path ]
             os.spawnv (os.P_WAIT, argv[0], argv)
             self.dialog.set_sensitive (True)
 
