@@ -44,7 +44,7 @@ config.py: config.py.in Makefile
 	sed						\
                 -e s!\@BINDIR\@!$(bindir)!		\
                 -e s!\@SBINDIR\@!$(sbindir)!		\
-                -e s!\@LIBEXECDIR\@!$(libexecdir)!		\
+                -e s!\@LIBEXECDIR\@!$(libexecdir)!	\
                 -e s!\@PKGDATADIR\@!$(pkgdatadir)!	\
                 -e s!\@SYSCONFDIR\@!$(sysconfdir)!	\
                 < $< > $@
